test/scc/expr/semantic-errors/146.a
146.t:10:28: error: too many initializer values